fix: hide scrollbar on sidebar navigation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,3 +187,15 @@
 html {
     font-size: var(--font-size);
 }
+
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+}
